added verifying whether the query has been tagged with the group ID
Signed-off-by: Lingxi Chen <lingxich@amazon.com>